# ai-driven-platform-operations

./: .cursorrules  .docker-compose.yaml.swp  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  ARGOCD-DEPLOYMENT.md  CHANGELOG.md  CHANGESET.md  LICENSE  MAINTAINERS.md  Makefile  README.md  REFACTORING_COMPLETE.md  REFACTORING_STATUS.md  Untitled  argocd-application-git.yaml  argocd-application.yaml  argocd.json  deploy.sh  docker-compose.build.yaml  docker-compose.dev.yaml  docker-compose.incident_engineer.yaml  docker-compose.jarvis.yaml  docker-compose.komodor.yaml  docker-compose.weather.yaml  docker-compose.yaml  grafana-dashboard-ai-platform.json  langgraph.json  persona.yaml  prompt_config.yaml  prompt_config_example.yaml  pyproject.toml  runme.sh  slim-config.yaml  test-komodor-refactor.sh  test_argocd_pagination.sh  test_streaming_curl.sh  test_streaming_debug.py
ai_platform_engineering/agents/argocd/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  a2a_agentcards.py  agent.py  langgraph.json  pyproject.toml
ai_platform_engineering/agents/aws/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
ai_platform_engineering/agents/backstage/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  a2a_agentcards.py  agent.py  pyproject.toml
ai_platform_engineering/agents/confluence/: .dockerignore  .gitignore  Dockerfile  MAINTAINERS.md  Makefile  README.md  pyproject.toml
ai_platform_engineering/agents/github/: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  PARAMETER_HANDLING_README.md  README.md  SECURITY.md  a2a_agentcards.py  agent.py  langgraph.json  pyproject.toml
ai_platform_engineering/agents/komodor/: Makefile  README.md  langgraph.json  pyproject.toml
ai_platform_engineering/agents/pagerduty/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  NOTICE  README.md  SECURITY.md  a2a_agentcards.py  agent.py  agent_card.json  pyproject.toml
ai_platform_engineering/agents/slack/: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  SECURITY.md  a2a_agentcards.py  agent.py  debug_client.py  langgraph.json  pyproject.toml
ai_platform_engineering/agents/splunk/: .dockerignore  CHANGELOG.md  Makefile  README.md  agent_card.json  pyproject.toml
ai_platform_engineering/agents/template/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  SECURITY.md  langgraph.json  pyproject.toml
ai_platform_engineering/agents/weather/: Makefile  main.py  pyproject.toml
ai_platform_engineering/agents/webex/: .env.example  .gitignore  MAINTAINERS.md  Makefile  README.md  pyproject.toml
ai_platform_engineering/common/: README.md  pyproject.toml
ai_platform_engineering/common/a2a/: __init__.py  base_agent.py  base_agent_executor.py
ai_platform_engineering/common/auth/: oauth2_middleware.py  shared_key_middleware.py
ai_platform_engineering/knowledge_bases/rag/: Architecture.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  README.md  docker-compose.yaml  pyproject.toml  run_tests.py  test_data.json
ai_platform_engineering/multi_agents/: README.md  __init__.py  agent_registry.py  pyproject.toml
ai_platform_engineering/multi_agents/incident_engineer/: __init__.py  prompts.py  supervisor_agent.py  tools.py
ai_platform_engineering/multi_agents/platform_engineer/: STREAMING_ARCHITECTURE.md  __init__.py  deep_agent.py  execution_plan_format.py  langgraph.json  metadata_parser.py  prompts.py  rag_prompts.py  response_format.py  structured_response_instructions.py  supervisor_agent.py  tools.py
ai_platform_engineering/multi_agents/tests/: README.md  TESTING.md  __init__.py  conftest.py  test_agent_registry.py  test_agent_registry_advanced.py  test_conftest.py
ai_platform_engineering/multi_agents/tools/: WORKSPACE_USAGE.md  __init__.py  analyze_query.py  caipe_memory.py  curl_tool.py  fetch_url.py  format_markdown.py  get_current_date.py  git_ops.py  glob_tool.py  grep_tool.py  reflect_on_output.py  wget_tool.py  workspace_ops.py
ai_platform_engineering/utils/: LOGGING_README.md  README.md  __init__.py  git_tools.py  logging_config.py  prompt_config.py  prompt_templates.py  pyproject.toml  subagent_prompts.py
ai_platform_engineering/utils/a2a/: __init__.py  a2a_remote_agent_connect.py  base_agent.py  base_agent_executor.py
ai_platform_engineering/utils/a2a_common/: README.md  __init__.py  a2a_remote_agent_connect.py  base_agent.py  base_agent_executor.py  base_langgraph_agent.py  base_langgraph_agent_executor.py  base_strands_agent.py  base_strands_agent_executor.py  context_config.py  helpers.py  langmem_utils.py  tool_output_manager.py
ai_platform_engineering/utils/agent_tools/: __init__.py  curl_tool.py  fetch_url_tool.py  file_tool.py  git_tool.py  glob_tool.py  grep_tool.py  jq_tool.py  wget_tool.py  yq_tool.py
ai_platform_engineering/utils/agntcy/: agntcy_remote_agent_connect.py
evals/: .dockerignore  .gitignore  Dockerfile  README.md  WEBHOOK_GUIDE.md  __init__.py  pyproject.toml  routing_runner.py  runner.py  test_extractor.py  upload_dataset.py
evals/clients/: __init__.py  eval_client.py
evals/datasets/: multi_agent.yaml  single_agent.yaml
evals/evaluators/: __init__.py  agent_match_evaluator.py  base.py  llm_evaluator.py  routing_evaluator.py  tool_call_evaluator.py  tool_match_evaluator.py  trajectory_evaluator.py  trajectory_llm.py
evals/models/: __init__.py  dataset.py  evaluation.py  trajectory.py
evals/prompts/: create_operations.yaml  eval_prompts.yaml  read_operations.yaml  update_operations.yaml
evals/tests/: save_trace_utility.py  test_trace_extractor.py  test_trace_tool_calls.py
evals/trace_analysis/: TRACE_STRUCTURE.md  __init__.py  extractor.py
evals/webhook/: __init__.py  langfuse_webhook.py
(+3458 files in other folders)
