[project]
name = "ai-platform-engineering"
version = "0.2.2"
description = "AI Platform Engineering Multi-Agent Systems"
authors = [
  {name = "CNOE Contributors"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "config (>=0.5.1,<0.6.0)",
    "langchain-core (>=0.3.65,<0.4.0)",
    "langgraph (==0.5.3)",
    "langgraph-supervisor (==0.0.28)",
    "a2a-sdk==0.3.0",
    "cnoe-agent-utils==0.3.2",
    "langchain (>=0.3.25)",
    "langfuse (>=3.0.8,<4.0.0)",
    "agntcy-app-sdk==0.4.0",
    "identity-service-sdk>=0.0.1",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.7",
    "langchain-mcp-adapters>=0.1.0",
    "neo4j>=6.0.2",
    "cymple>=0.12.0",
    "redis>=6.4.0",
    "mdformat>=0.7.0",
    "httpx>=0.27.0",
    "html2text>=2024.2.26",
    "beautifulsoup4>=4.12.0",
]

[tool.pytest.ini_options]
norecursedirs = "ai_platform_engineering/knowledge_bases/graph_rag/nexigraph/* ai_platform_engineering/knowledge_bases/rag/*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[tool.poetry.group.unittest.dependencies]
pytest-asyncio = "^1.0.0"

[tool.ruff]
# Allow lines to be as long as 300.
line-length = 300
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F403"]




[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv.sources]
agent-argocd = { workspace = true }
agent-komodor = { workspace = true }

[tool.uv.workspace]
members = [
    "ai_platform_engineering/agents/argocd",
    "ai_platform_engineering/agents/komodor",
]

[dependency-groups]
dev = [
    "agent-argocd",
    "agent-komodor",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "ruff>=0.12.7",
    # RAG testing dependencies
    "neo4j>=5.28.1",
    "cymple>=0.12.0",
    "redis>=6.2.0",
    "langchain-milvus>=0.2.1",
    "pymilvus>=2.6.0",
    "pandas>=2.0.0",
    "fastapi>=0.115.12,<0.116.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=6.0.1",
    "fastmcp>=2.11.1",
    "aiofile>=3.9.0",
    "aiohttp>=3.12.15",
]
unittest = [
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
]
