[project]
name = "ai-platform-engineering"
version = "0.2.4"
description = "AI Platform Engineering Multi-Agent Systems"
authors = [
  {name = "CNOE Contributors"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "config==0.5.1",
    "langchain-core==1.1.2",
    "langgraph==1.0.4",
    "langgraph==1.0.4",
    "a2a-sdk==0.3.0",
    "cnoe-agent-utils==0.3.9",
    "langchain==1.1.3",
    "langfuse==3.10.5",
    "agntcy-app-sdk==0.4.0",
    "pyjwt==2.10.1",
    "cryptography==46.0.3",
    "langchain-mcp-adapters==0.2.1",
    "mdformat==1.0.0",
    "httpx==0.28.1",
    "prometheus-client==0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["ai_platform_engineering/utils", "ai_platform_engineering/multi_agents"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[tool.poetry.group.unittest.dependencies]
pytest-asyncio = "^1.0.0"

[tool.ruff]
# Allow lines to be as long as 300.
line-length = 300
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F403"]




[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

unittest = [
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
]
