[project]
name = "ai-platform-engineering"
version = "0.2.5"
description = "AI Platform Engineering Multi-Agent Systems"
authors = [
  {name = "CNOE Contributors"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "a2a-sdk==0.3.0",
    "agntcy-app-sdk==0.4.0",
    "cnoe-agent-utils==0.3.9",
    "config==0.5.1",
    "cryptography==46.0.3",
    "httpx==0.28.1",
    "langchain==1.1.3",
    "langchain-core==1.1.2",
    "langchain-mcp-adapters==0.2.1",
    "langfuse==3.10.5",
    "langgraph==1.0.4",
    "mdformat==1.0.0",
    "prometheus-client==0.23.1",
    "pyjwt==2.10.1",
]

[tool.pytest.ini_options]
testpaths = ["ai_platform_engineering/utils", "ai_platform_engineering/multi_agents"]

[tool.ruff]
# Allow lines to be as long as 300.
line-length = 300
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F403"]




[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
unittest = [
    "pytest-asyncio>=1.3.0",
]
