[project]
name = "ai-platform-engineering-multi-agents"
version = "0.1.4"
description = "AI Platform Engineering Multi-Agent Orchestrator"
authors = [
  {name = "CNOE Contributors"}
]
license = {text = "Apache-2.0"}
# readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    # Core platform-engineer dependencies
    "click (>=8.2.1,<9.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "config (>=0.5.1,<0.6.0)",
    "langchain-core (>=0.3.65,<0.4.0)",
    "langgraph (==0.5.3)",
    "langgraph-supervisor (==0.0.28)",
    "langfuse (>=3.0.8,<4.0.0)",
    
    # Transport dependencies for agent connections
    "a2a-sdk (==0.2.16)",
    "agntcy-app-sdk>=0.1.1",
    "cnoe-agent-utils==0.2.2",
    
    # Basic utilities
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_platform_engineering"]

[tool.ruff]
line-length = 300
indent-width = 2

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F403"]