[project]
name = "ai-platform-engineering-utils"
version = "0.2.0"
license = "Apache-2.0"
description = "Common utilities and base classes for AI Platform Engineering agents"
readme = "README.md"
authors = [
    {name = "CNOE Team", email = "info@cnoe.io"},
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "a2a-sdk==0.3.0",
    "langchain-core==1.1.2",
    "langchain-mcp-adapters==0.1.11",
    "langgraph==1.0.4",
    "cnoe-agent-utils==0.3.9",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "PyJWT>=2.0.0",
    "httpx>=0.24.0",
    "agntcy-app-sdk==0.4.0",
    "strands-agents>=0.1.0",
    "mcp>=1.12.3",
    "prometheus_client>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 140
indent-width = 2

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
]
ignore = ["F403"]