[project]
name = "agent_aws"
version = "0.1.0"
license = "Apache-2.0"
description = "An AWS EKS AI agent using Strands Agents SDK and AWS EKS MCP Server."
readme = "README.md"
authors = [
    { name = "Omar Sayed", email = "osayed@cisco.com" },
]
maintainers = [
    { name = "Omar Sayed", email = "osayed@cisco.com" },
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "strands-agents>=0.1.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "click>=8.2.0",
    "python-dotenv>=1.0.0",
    "a2a-python>=0.0.1",
    "agntcy-acp>=1.3.2",
    "pytest>=8.3.5",
    "tabulate>=0.9.0",
    "keyring>=25.6.0",
    "uv",
    "a2a-sdk==0.3.0",
    "httpx>=0.28.1",
    "uvicorn>=0.35.0",
    "starlette>=0.47.2",
    "typing-extensions>=4.14.1",
    "requests>=2.32.4",
    "mcp>=1.12.3",
    "langchain-mcp-adapters==0.1.11",
    "langgraph==0.5.3",
    "deepagents>=0.3.0",
    "ai-platform-engineering-utils",
    "prometheus_client>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
ai-platform-engineering-utils = { path = "../../utils" }

[tool.poetry.scripts]
agent_aws_a2a = "agent_aws.protocol_bindings.a2a_server:main"

[tool.poetry.dependencies]
uv = "^0.7.5"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
ruff = "^0.8.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Allow lines to be as long as 140.
line-length = 140
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]
ignore = ["F403"]