[project]
name = "agent_confluence"
version = "0.1.0"
license = "Apache-2.0"
description = "An Confluence natural language agent using LangChain, LangGraph, and MCP."
readme = "README.md"
authors = [
    { name = "Omar Sayed", email = "osayed@cisco.com" },
]
maintainers = [
    { name = "Omar Sayed", email = "osayed@cisco.com" },
]
requires-python = ">=3.13, <4.0"
dependencies = [
    "a2a-python>=0.0.1",
    "agentevals>=0.0.7",
    "agntcy-acp>=1.3.2",
    "click>=8.2.0",
    "langchain-anthropic>=0.3.13",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.1.4",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "pytest>=8.3.5",
    "tabulate>=0.9.0",
    "keyring>=25.6.0",
    "uv",
    "a2a-sdk>=0.2.5",
    "cnoe-agent-utils (>=0.1.3,<0.2.0)",
]
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.poetry.scripts]
agent_confluence_a2a = "agent_confluence.protocol_bindings.a2a_server:main"

[tool.poetry.dependencies]
uv = "^0.7.5"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Allow lines to be as long as 140.
line-length = 140
# Number of spaces per indentation level
indent-width = 2

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
]
ignore = ["F403"]
