[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agent-pagerduty"
version = "0.1.0"
description = "A PagerDuty agent that uses LangGraph and MCP to interact with PagerDuty"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "agent_pagerduty"}]

[tool.poetry.dependencies]
python = ">=3.12.0,<4.0"
pydantic = "^2.6.4"
click = "^8.1.8"
langchain = "^0.3.19"
langgraph = "^0.3.5"
langchain-openai = "^0.3.6"
langchain-mcp-adapters = "^0.0.9"
fastapi = "^0.115.11"
uvicorn = "^0.34.2"
uv = "^0.7.2"

[tool.poetry.group.sanity.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.6"

[tool.poetry.scripts]
agent-pagerduty = "agent_pagerduty.__main__:main"

[tool.ruff]
lint.select = ["E", "F", "I", "TID251"]
lint.ignore = ["E501"]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
warn_no_return = false
warn_unused_ignores = true
warn_redundant_casts = true
allow_redefinition = true
disable_error_code = "typeddict-item, return-value, override, has-type" 