# Copyright 2025 CNOE Contributors
# SPDX-License-Identifier: Apache-2.0

[project]
name = "agent-splunk"
version = "1.0.0"
description = "Splunk AI Agent for log search, monitoring, and alert management"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [
    { name = "Rehan Agrawal", email = "rehagraw@cisco.com" },
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "a2a-sdk==0.3.0",
    "agentevals>=0.0.7",
    "agntcy-app-sdk==0.4.0",
    "slim-bindings==0.4.1",
    "click>=8.2.0",
    "langchain-anthropic>=0.3.13",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.1.4",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.3.17",
    "langgraph==0.5.3",
    "pytest>=8.3.5",
    "tabulate>=0.9.0",
    "uv",
    "rich>=14.0.0",
    "sseclient>=0.0.27",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.2",
    "httpx>=0.27.0",
    "httpx-sse>=0.3.0",
    "python-dotenv>=1.0.1",
    "cnoe-agent-utils==0.3.2",
    "langchain>=0.1.0",
    "pydantic>=2.0.0",
    "a2a>=0.0.1",
    "fastmcp>=2.11.2",
    "mcp-splunk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
agent-splunk-a2a = "agent_splunk.protocol_bindings.a2a_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_splunk"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["F403", "F401", "ANN101", "ANN102", "ANN401", "S101", "PLR0913", "PLR0912", "PLR0915", "C901", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN"]
"**/protocol_bindings/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "a2a.*",
    "langchain.*",
    "langgraph.*",
    "fastmcp.*",
    "cnoe_agent_utils.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=agent_splunk --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

[tool.uv.sources]
mcp-splunk = { path = "mcp" }